force-app/main/default/objects/leaseworks__Admin_Data_Validation__c/leaseworks__Admin_Data_Validation__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Admin Data Validation</label>
    <nameField>
        <label>Admin Data Validation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Admin Data Validation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>