force-app/main/default/objects/leaseworks__Admin_Data_Validation__c/fields/leaseworks__Condition__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Condition__c</fullName>
    <label>Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>