force-app/main/default/objects/leaseworks__Admin_Data_Validation__c/fields/leaseworks__Desc__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Desc__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>