force-app/main/default/objects/leaseworks__Admin_Data_Validation__c/fields/leaseworks__Impact__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Impact__c</fullName>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>