force-app/main/default/objects/leaseworks__Admin_Data_Validation__c/fields/leaseworks__Report_Filter__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Report_Filter__c</fullName>
    <description>To get Inactive or failed script in case of active.</description>
    <formula>(leaseworks__Active__c &amp;&amp;  text(leaseworks__Status__c) != &apos;Success&apos;) || !leaseworks__Active__c</formula>
    <label>_Report Filter</label>
    <type>Checkbox</type>
</CustomField>