force-app/main/default/objects/leaseworks__Admin_Data_Validation__c/fields/leaseworks__Script_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Script_Method_Name__c</fullName>
    <label>_Script Method Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>