force-app/main/default/objects/leaseworks__Admin_Data_Validation__c/validationRules/leaseworks__ScriptMethodName.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__ScriptMethodName</fullName>
    <active>true</active>
    <description>Required field</description>
    <errorConditionFormula>isBlank(leaseworks__Script_Method_Name__c)</errorConditionFormula>
    <errorDisplayField>leaseworks__Script_Method_Name__c</errorDisplayField>
    <errorMessage>Required field</errorMessage>
</ValidationRule>