force-app/main/default/objects/leaseworks__Admin_Data_Validation__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Object_Name__c</columns>
    <columns>leaseworks__Status__c</columns>
    <columns>leaseworks__Category__c</columns>
    <columns>leaseworks__Desc__c</columns>
    <columns>leaseworks__Impact__c</columns>
    <columns>leaseworks__Failures__c</columns>
    <columns>leaseworks__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>